--- a/Homework_I-2024.ipynb
+++ b/Homework_I-2024.ipynb
@@ -41,12 +41,21 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "115466",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "markdown"
+    }
    },
-   "source": []
+   "outputs": [],
+   "source": [
+    "ATAD1 (ATPase family AAA domain-containing protein 1)\n",
+    "KLLN (Killin, p53-regulated DNA replication inhibitor)\n",
+    "PTEN (Phosphatase and tensin homolog)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -63,9 +72,17 @@
    "cell_type": "raw",
    "id": "650bad",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "raw"
+    }
    },
-   "source": []
+   "source": [
+    "The most likely candidate gene in the specified region that encodes an enzyme and is related to human cancers is PTEN (Phosphatase and Tensin Homolog).\n",
+    "https://www.uniprot.org/uniprotkb/P60484/entry\n",
+    "https://www.ncbi.nlm.nih.gov/gene/5728\n",
+    "https://genome.ucsc.edu/cgi-bin/hgc?hgsid=2348377847_d9d5sPWB2ZdfaGEfhgcHAYE6g4GO&db=hg38&c=chr10&l=87799999&r=87980000&o=87863624&t=87971930&g=ncbiRefSeqCurated&i=NM_001304718.2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,10 +99,7 @@
    "execution_count": null,
    "id": "c3eb4b",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "plaintext"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -125,10 +139,7 @@
    "execution_count": 3,
    "id": "622d27",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -148,10 +159,7 @@
    "execution_count": null,
    "id": "bf9678",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -193,10 +201,7 @@
    "execution_count": null,
    "id": "09b217",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -219,10 +224,7 @@
    "execution_count": 8,
    "id": "67169b",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -243,10 +245,7 @@
    "execution_count": 9,
    "id": "480f05",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -296,10 +295,7 @@
    "execution_count": 10,
    "id": "43f3eb",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [
     {
@@ -377,10 +373,7 @@
    "execution_count": null,
    "id": "b9cd29",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -388,11 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -411,10 +400,7 @@
    "execution_count": null,
    "id": "003c92",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -434,10 +420,7 @@
    "execution_count": null,
    "id": "213d77",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -465,10 +448,7 @@
    "execution_count": null,
    "id": "132b41",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -514,10 +494,7 @@
    "execution_count": 17,
    "id": "ccf4b1",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -537,10 +514,7 @@
    "execution_count": null,
    "id": "32cb41",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -569,10 +543,7 @@
    "execution_count": null,
    "id": "c292e0",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -597,10 +568,7 @@
    "execution_count": 23,
    "id": "947d6a",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -620,10 +588,7 @@
    "execution_count": null,
    "id": "f398a3",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -648,10 +613,7 @@
    "execution_count": null,
    "id": "b4ee85",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -692,10 +654,7 @@
    "execution_count": null,
    "id": "c09c6c",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -733,10 +692,7 @@
    "execution_count": null,
    "id": "0d97e4",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -784,10 +740,7 @@
    "execution_count": null,
    "id": "35bf3e",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -807,10 +760,7 @@
    "execution_count": null,
    "id": "bb8e9c",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -834,10 +784,7 @@
    "execution_count": null,
    "id": "62550f",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -882,10 +829,7 @@
    "execution_count": null,
    "id": "c32d2d",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -895,10 +839,7 @@
    "execution_count": null,
    "id": "741711",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "plaintext"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -950,10 +891,7 @@
    "execution_count": null,
    "id": "8f871e",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -973,10 +911,7 @@
    "execution_count": null,
    "id": "bc10d9",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -996,10 +931,7 @@
    "execution_count": 41,
    "id": "a75a44",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -1021,10 +953,7 @@
    "execution_count": null,
    "id": "ffe867",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "r"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -1185,10 +1114,7 @@
    "execution_count": null,
    "id": "563982",
    "metadata": {
-    "collapsed": false,
-    "vscode": {
-     "languageId": "plaintext"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": []
@@ -1196,33 +1122,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "argv": [
-    "/usr/bin/R",
-    "-e",
-    "IRkernel::main()",
-    "--args",
-    "{connection_file}"
-   ],
-   "display_name": "R (system-wide)",
-   "env": {},
-   "language": "r",
-   "metadata": {
-    "cocalc": {
-     "description": "R statistical programming language",
-     "priority": 10,
-     "url": "https://www.r-project.org/"
-    }
-   },
-   "name": "ir",
-   "resource_dir": "/ext/jupyter/kernels/ir"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "4.4.1"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   },
   "name": "Online_database_in_class.ipynb"
  },
