--- a/Homework_I-2024.ipynb
+++ b/Homework_I-2024.ipynb
@@ -136,13 +136,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "622d27",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "illegal target for annotation (3101485071.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    vec1 <- 5:100\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m illegal target for annotation\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create vec1 with elements from 5 to 100\n",
+    "vec1 <- 5:100\n",
+    "\n",
+    "# Create vec2 with elements from 5 to 10\n",
+    "vec2 <- 5:10\n"
+   ]
   },
   {
    "cell_type": "markdown",
