--- a/Homework_I-2024.ipynb
+++ b/Homework_I-2024.ipynb
@@ -41,8 +41,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "id": "115466",
    "metadata": {
     "collapsed": false,
@@ -50,16 +49,6 @@
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:15: unexpected symbol\n1: ATAD1 (ATPase family\n                  ^\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in parse(text = x, srcfile = src): <text>:1:15: unexpected symbol\n1: ATAD1 (ATPase family\n                  ^\nTraceback:\n"
-     ]
-    }
-   ],
    "source": [
     "ATAD1 (ATPase family AAA domain-containing protein 1)\n",
     "KLLN (Killin, p53-regulated DNA replication inhibitor)\n",
@@ -78,7 +67,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "650bad",
    "metadata": {
     "collapsed": false,
@@ -89,7 +78,9 @@
    "source": [
     "The most likely candidate gene in the specified region that encodes an enzyme and is related to human cancers is PTEN (Phosphatase and Tensin Homolog).\n",
     "https://www.uniprot.org/uniprotkb/P60484/entry\n",
+    "\n",
     "https://www.ncbi.nlm.nih.gov/gene/5728\n",
+    "\n",
     "https://genome.ucsc.edu/cgi-bin/hgc?hgsid=2348377847_d9d5sPWB2ZdfaGEfhgcHAYE6g4GO&db=hg38&c=chr10&l=87799999&r=87980000&o=87863624&t=87971930&g=ncbiRefSeqCurated&i=NM_001304718.2"
    ]
   },
@@ -104,8 +95,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "c3eb4b",
    "metadata": {
     "collapsed": false,
@@ -113,8 +103,11 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Based on the information from UniProt, the Phosphatase tensin-type domain (residues 14-185) is a key structural domain of the protein that is relevant to its function in tumor suppression. This domain is critical because PTEN (Phosphatase and Tensin Homolog) acts as a tumor suppressor by dephosphorylating phosphoinositide substrates, which is essential for regulating cell proliferation and survival. Therefore, this phosphatase domain is directly involved in PTEN’s tumor suppressive function.\n",
+    "\n",
+    "Thus, knocking out this Phosphatase tensin-type domain (14-185) would be a relevant experiment for Sarah to study the impact of this domain on the gene's tumor suppressive function."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -148,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "id": "622d27",
    "metadata": {
     "collapsed": false,
@@ -177,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "id": "bf9678",
    "metadata": {
     "collapsed": false,
@@ -236,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "09b217",
    "metadata": {
     "collapsed": false,
@@ -276,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "67169b",
    "metadata": {
     "collapsed": false,
@@ -288,40 +281,48 @@
     {
      "data": {
       "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>Sub1</th><th scope=col>Scg2</th><th scope=col>Aldoa</th></tr></thead>\n",
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 6 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Sub1</th><th scope=col>Scg2</th><th scope=col>Aldoa</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>29</td><td> 0</td><td>62</td></tr>\n",
-       "\t<tr><td>11</td><td> 1</td><td>33</td></tr>\n",
-       "\t<tr><td>14</td><td> 1</td><td>20</td></tr>\n",
-       "\t<tr><td>19</td><td> 4</td><td>51</td></tr>\n",
-       "\t<tr><td>17</td><td> 3</td><td>27</td></tr>\n",
-       "\t<tr><td>34</td><td>13</td><td>31</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>29</td><td> 0</td><td>62</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>11</td><td> 1</td><td>33</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>14</td><td> 1</td><td>20</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>19</td><td> 4</td><td>51</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>17</td><td> 3</td><td>27</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>34</td><td>13</td><td>31</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
+       "A data.frame: 6 × 3\n",
        "\\begin{tabular}{r|lll}\n",
-       " Sub1 & Scg2 & Aldoa\\\\\n",
+       "  & Sub1 & Scg2 & Aldoa\\\\\n",
+       "  & <int> & <int> & <int>\\\\\n",
        "\\hline\n",
-       "\t 29 &  0 & 62\\\\\n",
-       "\t 11 &  1 & 33\\\\\n",
-       "\t 14 &  1 & 20\\\\\n",
-       "\t 19 &  4 & 51\\\\\n",
-       "\t 17 &  3 & 27\\\\\n",
-       "\t 34 & 13 & 31\\\\\n",
+       "\t1 & 29 &  0 & 62\\\\\n",
+       "\t2 & 11 &  1 & 33\\\\\n",
+       "\t3 & 14 &  1 & 20\\\\\n",
+       "\t4 & 19 &  4 & 51\\\\\n",
+       "\t5 & 17 &  3 & 27\\\\\n",
+       "\t6 & 34 & 13 & 31\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| Sub1 | Scg2 | Aldoa |\n",
-       "|---|---|---|\n",
-       "| 29 |  0 | 62 |\n",
-       "| 11 |  1 | 33 |\n",
-       "| 14 |  1 | 20 |\n",
-       "| 19 |  4 | 51 |\n",
-       "| 17 |  3 | 27 |\n",
-       "| 34 | 13 | 31 |\n",
+       "A data.frame: 6 × 3\n",
+       "\n",
+       "| <!--/--> | Sub1 &lt;int&gt; | Scg2 &lt;int&gt; | Aldoa &lt;int&gt; |\n",
+       "|---|---|---|---|\n",
+       "| 1 | 29 |  0 | 62 |\n",
+       "| 2 | 11 |  1 | 33 |\n",
+       "| 3 | 14 |  1 | 20 |\n",
+       "| 4 | 19 |  4 | 51 |\n",
+       "| 5 | 17 |  3 | 27 |\n",
+       "| 6 | 34 | 13 | 31 |\n",
        "\n"
       ],
       "text/plain": [
@@ -358,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "480f05",
    "metadata": {
     "collapsed": false,
@@ -392,7 +393,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "cee896",
    "metadata": {
     "collapsed": false,
@@ -416,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "43f3eb",
    "metadata": {
     "collapsed": false,
@@ -428,37 +429,45 @@
     {
      "data": {
       "text/html": [
-       "<table>\n",
-       "<thead><tr><th scope=col>Sub1</th><th scope=col>Scg2</th><th scope=col>Aldoa</th></tr></thead>\n",
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.frame: 5 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Sub1</th><th scope=col>Scg2</th><th scope=col>Aldoa</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>29</td><td>0 </td><td>62</td></tr>\n",
-       "\t<tr><td>11</td><td>1 </td><td>33</td></tr>\n",
-       "\t<tr><td>14</td><td>1 </td><td>20</td></tr>\n",
-       "\t<tr><td>19</td><td>4 </td><td>51</td></tr>\n",
-       "\t<tr><td>17</td><td>3 </td><td>27</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>29</td><td>0</td><td>62</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>11</td><td>1</td><td>33</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>14</td><td>1</td><td>20</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>19</td><td>4</td><td>51</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>17</td><td>3</td><td>27</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
+       "A data.frame: 5 × 3\n",
        "\\begin{tabular}{r|lll}\n",
-       " Sub1 & Scg2 & Aldoa\\\\\n",
+       "  & Sub1 & Scg2 & Aldoa\\\\\n",
+       "  & <int> & <int> & <int>\\\\\n",
        "\\hline\n",
-       "\t 29 & 0  & 62\\\\\n",
-       "\t 11 & 1  & 33\\\\\n",
-       "\t 14 & 1  & 20\\\\\n",
-       "\t 19 & 4  & 51\\\\\n",
-       "\t 17 & 3  & 27\\\\\n",
+       "\t1 & 29 & 0 & 62\\\\\n",
+       "\t2 & 11 & 1 & 33\\\\\n",
+       "\t3 & 14 & 1 & 20\\\\\n",
+       "\t4 & 19 & 4 & 51\\\\\n",
+       "\t5 & 17 & 3 & 27\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "| Sub1 | Scg2 | Aldoa |\n",
-       "|---|---|---|\n",
-       "| 29 | 0  | 62 |\n",
-       "| 11 | 1  | 33 |\n",
-       "| 14 | 1  | 20 |\n",
-       "| 19 | 4  | 51 |\n",
-       "| 17 | 3  | 27 |\n",
+       "A data.frame: 5 × 3\n",
+       "\n",
+       "| <!--/--> | Sub1 &lt;int&gt; | Scg2 &lt;int&gt; | Aldoa &lt;int&gt; |\n",
+       "|---|---|---|---|\n",
+       "| 1 | 29 | 0 | 62 |\n",
+       "| 2 | 11 | 1 | 33 |\n",
+       "| 3 | 14 | 1 | 20 |\n",
+       "| 4 | 19 | 4 | 51 |\n",
+       "| 5 | 17 | 3 | 27 |\n",
        "\n"
       ],
       "text/plain": [
@@ -491,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "b9cd29",
    "metadata": {
     "collapsed": false,
@@ -617,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -802,7 +811,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "cd4536",
    "metadata": {
     "collapsed": false,
@@ -902,7 +911,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "105e1f",
    "metadata": {
     "collapsed": false,
@@ -926,7 +935,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "f08e01",
    "metadata": {
     "collapsed": false,
@@ -1026,7 +1035,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "406e2a",
    "metadata": {
     "collapsed": false,
@@ -1288,7 +1297,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "de8a09",
    "metadata": {
     "collapsed": false,
@@ -1357,7 +1366,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "2d7111",
    "metadata": {
     "collapsed": false,
@@ -1430,7 +1439,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "4e19d7",
    "metadata": {
     "collapsed": false,
@@ -1650,12 +1659,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "06e19b",
    "metadata": {
     "collapsed": false,
     "vscode": {
-     "languageId": "raw"
+     "languageId": "r"
     }
    },
    "source": [
@@ -1725,8 +1734,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
+   "cell_type": "markdown",
    "id": "741711",
    "metadata": {
     "collapsed": false,
@@ -1734,16 +1742,6 @@
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in parse(text = x, srcfile = src): <text>:1:4: unexpected symbol\n1: By setting\n       ^\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in parse(text = x, srcfile = src): <text>:1:4: unexpected symbol\n1: By setting\n       ^\nTraceback:\n"
-     ]
-    }
-   ],
    "source": [
     "By setting alpha = 0.6, the bars become more transparent. This makes it easier to see where the histograms for Sub1 and Scg2 overlap, as both colors will blend slightly in areas where both distributions share similar expression values. The lower the alpha value, the more transparent the bars will be.\n",
     "\n",
@@ -1763,7 +1761,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "2a5f39",
    "metadata": {
     "collapsed": false,
@@ -1772,7 +1770,6 @@
     }
    },
    "source": [
-    "\n",
     "To add error bars to your plot in ggplot2, you can use the geom_errorbar() function.\n",
     "\n",
     "The geom_errorbar() function is used to add vertical error bars, which are useful for displaying the variability or uncertainty in data, such as the standard error or confidence intervals around the mean."
@@ -2503,7 +2500,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "261ff0",
    "metadata": {
     "collapsed": false,
@@ -2528,7 +2525,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "fa533a",
    "metadata": {
     "collapsed": false,
@@ -2572,12 +2569,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "99c2ff",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "raw"
+    }
    },
-   "source": []
+   "source": [
+    "The Bonferroni correction and False Discovery Rate (FDR) correction are both methods used to adjust for multiple comparisons, but they control for different types of errors. The Bonferroni correction is a conservative method that controls the family-wise error rate (FWER), ensuring the probability of making any false positive (Type I error) is kept below a chosen significance level. It does this by dividing the significance threshold by the number of tests, making it very strict but often leading to a higher likelihood of false negatives (Type II errors). In contrast, the FDR correction, commonly applied via the Benjamini-Hochberg procedure, controls the proportion of false positives among all significant results. FDR is less stringent than Bonferroni and allows for some false positives to improve the detection of true positives, making it more powerful for large datasets where multiple comparisons are made. The Bonferroni correction is best for scenarios where any false positive is unacceptable, while FDR is suited for exploratory research where balancing false positives and power is more important."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2590,12 +2592,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "42aa0c",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "raw"
+    }
    },
-   "source": []
+   "source": [
+    "An example where Bonferroni correction would be appropriate, but FDR correction is not, is in clinical trials testing the efficacy of multiple drugs or treatments. In this context, making even a single false positive error (incorrectly concluding a drug is effective when it is not) can have serious consequences for patient safety and regulatory approval. The Bonferroni correction is ideal here because it strictly controls the family-wise error rate, ensuring no false positives. In contrast, the FDR correction allows some false positives, which is less suitable in high-stakes situations where any incorrect conclusion could lead to harmful outcomes."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2608,12 +2615,17 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "id": "e98b46",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "vscode": {
+     "languageId": "raw"
+    }
    },
-   "source": []
+   "source": [
+    "An example where FDR correction would be appropriate but Bonferroni correction might not be recommended is in genome-wide association studies (GWAS), where thousands of genetic variants are tested for association with a trait. In this case, the goal is to identify as many true associations as possible while controlling for the proportion of false positives. FDR correction is suitable because it balances the need to detect true signals without being overly conservative. Bonferroni correction, on the other hand, would be too stringent due to the large number of comparisons, potentially leading to a high rate of false negatives and missing many true associations."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2630,8 +2642,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "563982",
    "metadata": {
     "collapsed": false,
@@ -2639,8 +2650,16 @@
      "languageId": "r"
     }
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "False. A p-value is not the probability that a result is true. Instead, it is the probability of observing data as extreme as, or more extreme than, the observed results, assuming that the null hypothesis is true.\n",
+    "Corrected: A p-value is the probability of obtaining the observed result, or something more extreme, assuming the null hypothesis is true.\n",
+    "\n",
+    "True. If the null hypothesis is true, and 1,000 tests are conducted, we expect approximately 1% (which is 10 tests at a 0.01 significance level) to be significant due to random chance alone. However, the statement says 50 tests at a significance level of 0.01, which is incorrect.\n",
+    "Correction: In an analysis where 1,000 tests are conducted, approximately 10 tests are expected to be significant at a significance level of 0.01, even if the null hypothesis is true.\n",
+    "\n",
+    "False. Visually examining data to decide which hypothesis tests to conduct introduces bias and undermines the validity of statistical tests, as this approach can inflate the false positive rate.\n",
+    "Corrected: In order to reduce multiple testing correction, biologists should predefine their hypotheses and analysis plan before examining the data to avoid introducing bias."
+   ]
   }
  ],
  "metadata": {
