little more progress

--- a/2024_Homework_II.ipynb
+++ b/2024_Homework_II.ipynb
@@ -1364,22 +1364,26 @@
     "collapsed": false
    },
    "source": [
-    "**Q24.** **[2 points]** From the folder from where you ended the last section, give and run the commands to navigate into the `chip-seq_data` folder and identify how many peaks we have in the file of p53 peaks under DMSO treatment which we used in the first ChIP-Seq module."
+    "**Q24.** **[2 points]** From the folder from where you ended the last section, give and run the commands to navigate into the `chip-seq_data` folder and identify how many peaks we have in the file of p53 peaks under DMSO treatment which we used in the first ChIP-Seq module.\n",
+    "\n",
+    "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "raw",
    "id": "c807fb",
    "metadata": {
     "collapsed": false,
     "vscode": {
-     "languageId": "r"
+     "languageId": "raw"
     }
    },
-   "outputs": [],
    "source": [
-    "# write code below: "
+    "cd ..\n",
+    "cd chip-seq-data\n",
+    "wc -l p53-input.DMSO_peaks.narrowPeak.bed\n",
+    "\n",
+    "20"
    ]
   },
   {
@@ -1397,18 +1401,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "raw",
    "id": "118997",
    "metadata": {
     "collapsed": false,
     "vscode": {
-     "languageId": "r"
+     "languageId": "raw"
     }
    },
-   "outputs": [],
    "source": [
-    "# write code below:"
+    "cut -f1 p53-input.DMSO_peaks.narrowPeak.bed | sort | uniq -c | sort -nr\n",
+    "\n",
+    "\n",
+    "3 chr4\n",
+    "3 chr1\n",
+    "2 chr6\n",
+    "2 chr17\n",
+    "2 chr19\n",
+    "1 chr9\n",
+    "1 chr8\n",
+    "1 chr7\n",
+    "1 chr5\n",
+    "1 chr16\n",
+    "1 chr15\n",
+    "1 chr3\n",
+    "1 chr2"
    ]
   },
   {
